--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 						<!-- Logo -->
 						<h1 id="logo" class="mbp"><span class="acronym">M</span>ilwaukie <span class="acronym">B</span>ay <span class="acronym">P</span>ark</h1><br>
-						<h4>will soon lose over TWO MILLION DOLLARS of grant money set aside for bathrooms, shade trees, picnic areas, and play areas.  </h4><br>
+						<h4>will soon lose over <b>TWO MILLION DOLLARS</b> of grant money set aside for bathrooms, shade trees, picnic areas, and play areas.  </h4><br>
 						<h2>It's time to ask the Clackamas County Commissioners: </h2>
 						<p>...</p>
 							<h1 id="logo" class="wtf"><a href="index.html"><span class="acronym">W</span>here's <span class="acronym">T</span>he <span class="acronym">F</span>unding?</a></h1>
@@ -87,7 +87,14 @@
 										<h2>What can I do to help?</h2>
 									</header>
 									<h3>Email the Clackamas County Commissioners</h3>
-									<p>The county commissioners are elected to be accountable to the people.  Email them and tell them you want them to finish building Milwaukie Bay Park using the grant money we already have.  Their email address is: BCC@clackamas.us. </p>
+									<p>The county commissioners are elected to be accountable to the people.  Their email address is: BCC@clackamas.us. </p>
+									Here are some ideas to get you started:
+									<ol>
+										<li>We want full transparency on the NCPRD's MBP website.  No more indefinite project holds.</li>
+										<li>Where's the Funding? We want commitments that you are doing everything you can to save the $2.4 million in grant money.</li>
+										<li>We want to see a plan for resuming the construction phase and building MBP.</li>
+									</ol>
+									
 								</article>
 
 								<article id="informed" class="box post">
