--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 						<!-- Logo -->
 						<h1 id="logo" class="mbp"><span class="acronym">M</span>ilwaukie <span class="acronym">B</span>ay <span class="acronym">P</span>ark</h1><br>
-						<h4>will soon lose over <b>TWO MILLION DOLLARS</b> of grant money set aside for bathrooms, shade trees, picnic areas, and play areas.  </h4><br>
+						<h4>will soon lose over <b>TWO MILLION DOLLARS</b> of grant money set aside for bathrooms, shade trees, picnic areas, and play areas.  </h4>
 						<h2>It's time to ask the Clackamas County Commissioners: </h2>
 						<p>...</p>
 							<h1 id="logo" class="wtf"><a href="index.html"><span class="acronym">W</span>here's <span class="acronym">T</span>he <span class="acronym">F</span>unding?</a></h1>
@@ -48,6 +48,9 @@
 							<!-- Post -->
 
 								<article id="facts" class="box post">
+
+
+
 									<header>
 										<h2>Here are the facts</h2>
 									</header>
@@ -72,6 +75,14 @@
 										</li>
 										<li>Allowing grant money to lapse may affect Milwaukie's ability to secure grants in the future.</li>
 									</ol>
+
+									<h3>This doesn't have to be complicated</h3>
+									<ol>
+										<li>
+											There is an open legal question about whether or not Milwaukie will leave the North Clackamas Parks and Recreation District.  This is a complex matter that's not likely to be resolved soon.  But that's no reason to hold up and forfeit this grant money.  It's time to separate these two issues, so that we can improve a regional park that's of benefit to those all over Clackamas County and beyond.
+										</li>
+									</ol>
+
 
 								</article>
 
