--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 									<h3>This doesn't have to be complicated</h3>
 									<ol>
 										<li>
-											There is an open legal question about whether or not Milwaukie will leave the North Clackamas Parks and Recreation District.  This is a complex matter that's not likely to be resolved soon.  But that's no reason to hold up and forfeit this grant money.  It's time to separate these two issues, so that we can improve a regional park that's of benefit to those all over Clackamas County and beyond.
+											There is an open legal question about whether or not Milwaukie will leave the North Clackamas Parks and Recreation District.  
+											</li><li>
+											This is a complex matter that's not likely to be resolved soon.  
+										</li><li>
+											It's time to separate these two issues, so that we can improve a regional park that's of benefit to those all over Clackamas County and beyond.
 										</li>
 									</ol>
 
