--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N1VQ9Z7YBK"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-N1VQ9Z7YBK');
+	</script>	
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
@@ -21,7 +30,7 @@
 
 						<!-- Logo -->
 						<h1 id="logo" class="mbp"><span class="acronym">M</span>ilwaukie <span class="acronym">B</span>ay <span class="acronym">P</span>ark</h1><br>
-						<h4>will soon lose over <b>TWO MILLION DOLLARS</b> of grant money set aside for bathrooms, shade trees, picnic areas, and play areas.  </h4>
+						<h4>will soon lose over <b>TWO MILLION DOLLARS</b> of grant money set aside for bathrooms, shade trees, picnic areas, a playground, and a splash pad.  </h4>
 						<h2>It's time to ask the Clackamas County Commissioners: </h2>
 						<p>...</p>
 							<h1 id="logo" class="wtf"><a href="index.html"><span class="acronym">W</span>here's <span class="acronym">T</span>he <span class="acronym">F</span>unding?</a></h1>
