--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 									<h3>Public transparency and accountability is lacking.</h3>
 									<ol>
-										<li>In 2022, the County Board of Commissioners directed NCPRD put a “90-day hold on the project” as Commissioner Paul Savas was concerned that Milwaukie could one day leave the North Clackamas Parks and Recreation District. 
+										<li>In 2022, the County Board of Commissioners directed NCPRD put a “90-day hold on the project” as Commissioner Paul Savas was concerned that Milwaukie could one day leave the North Clackamas Parks and Recreation District. This concern is political theater.  Regardless of whether Milwaukie leaves the district, the park would remain equally accessible to everyone.
 										</li><li>
 											For over two years now that “90-day hold” has been in place and no planning or development has occurred. Meanwhile, construction costs have skyrocketed with inflation and NCPRD has focused parks development efforts on other projects, as well as new master planning for the entire district.
 										</li><li>
