--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="#facts"><span>Get the Facts</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="#who"><span>Who We Are</span></a></li>
-									<li><a class="icon solid fa-retweet" href="#what"><span>What We Want</span></a></li>
-									<li><a class="icon solid fa-cog" href="#action"><span>Take Action</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="#letters"><span>Hear from Others</span></a></li>
+									<li><a class="icon solid fa-check" href="#facts"><span>Get the Facts</span></a></li>
+									<li><a class="icon solid fa-question" href="#who"><span>Who We Are</span></a></li>
+									<li><a class="icon solid fa-comment" href="#what"><span>What We Want</span></a></li>
+									<li><a class="icon solid fa-lightbulb" href="#action"><span>Take Action</span></a></li>
+									<li><a class="icon solid fa-envelope" href="#letters"><span>Hear from Others</span></a></li>
 								</ul>
 							</nav>
 
@@ -120,7 +120,7 @@
 									<header>
 										<h2>What We Want</h2>
 									</header>
-									<h2>We want Milwaukie Bay Park to be finished using the money we have already.</h2>
+									<h2>We want Milwaukie Bay Park to be finished using the grant money we already have.</h2>
 									<h3>What would a finished park look like?  See for yourself!  Images sourced from the <a href="https://ncprd.com/milwaukie-bay-park-project">NCPRD MBP Project Page</a></h3>
 
 
