--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<h1 id="logo" class="wtf"><a href="index.html"><span class="acronym">W</span>here's <span class="acronym">T</span>he <span class="acronym">F</span>unding?</a></h1>
 
 							<br>
-						<h3>This is fiscal mismanagement plain and simple.  It's time for them to do their duty and finish building the park.</h3>
+						<h3>This is fiscal mismanagement plain and simple.  It's time for your elected officials to stop playing politics, and use the money we already have to finish building the park.</h3>
 
 						<!-- Nav -->
 							<nav id="nav">
