--- a/index.html
+++ b/index.html
@@ -389,7 +389,27 @@
           </div>
         </div>
       </section>
+
+
+			<!-- Footer -->
+			<section id="footer">
+				<div class="container">
+					<header>
+						<h3>Questions or comments? <strong>Get in touch: mbp (dot) wtf (at) gmail (dot) com</strong></h3>
+					</header>
+				</div>
+				<div id="copyright" class="container">
+					<ul class="links">
+						<li>&copy; MBP.WTF. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</section>
+
+
+
     </div>
+
+
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
