--- a/index.html
+++ b/index.html
@@ -32,22 +32,20 @@
     <div id="page-wrapper">
       <!-- Header -->
       <section id="header">
-        <div class="container">
-          <a href="#" class="image featured"
-            ><img src="images/mbp-banner2.jpg" alt=""
-          /></a>
-
+        <div class="container demo-wrap">
+<br><br>
           <!-- Logo -->
-          <h1 id="logo" class="mbp">
+		   <div class="mbp demo-content">
+          <h1 id="logo" >
             <span class="acronym">M</span>ilwaukie
             <span class="acronym">B</span>ay <span class="acronym">P</span>ark
           </h1>
           <br />
           <h4>
-            will soon lose over <b>TWO MILLION DOLLARS</b> of grant money set
-            aside for bathrooms, shade trees, picnic areas, a playground, and a
-            splash pad.
+            will soon lose over <b>$2 Million</b> of grant money set
+            aside for bathrooms, shade trees, picnic and play areas.
           </h4>
+		  <br><br>
           <h2>It's time to ask the Clackamas County Commissioners:</h2>
           <p>...</p>
           <h1 id="logo" class="wtf">
@@ -64,7 +62,8 @@
             elected officials to stop playing politics, and use the money we
             already have to finish building the park.
           </h3>
-
+		  <p>👇 Scroll Down to Learn More!</p>
+		</div>
           <!-- Nav -->
           <nav id="nav">
             <ul>
