--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
           <div id="content">
             <!-- Post -->
 
+            <article id="gist" class="box post">
+				<header>
+				  <h2>Here's the gist</h2>
+				</header>
+				<p>
+				  Milwaukie Bay Park (MBP) is located near downtown Milwaukie, Oregon.  It boasts a beautiful view of the Willamette River, a multi use trail, and a boat launch.  It's a beautiful park, but it could be so much more.  Many improvements were planned, but are not getting built, due to the Clackamas County Commissioners playing politics instead of finishing the park.  If you'd like to help MBP be all it can be, read on!
+				</p>
+  
+			
             <article id="facts" class="box post">
               <header>
                 <h2>Here are the facts</h2>
