--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                   In 2021, the County Board of Commissioners directed NCPRD put
                   a “90-day hold on the project” as Commissioner Paul Savas was
                   concerned that Milwaukie could one day leave the North
-                  Clackamas Parks and Recreation District. This concern is
+                  Clackamas Parks and Recreation District. Tying this issue to park construction is 
                   political theater. Regardless of whether Milwaukie leaves the
                   district, the park would remain equally accessible to
                   everyone.
