--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </h1>
           <br />
           <h4>
-            will soon lose over <b>$2 Million</b> of grant money set
+            may soon lose over <b>$2 Million</b> of grant money set
             aside for bathrooms, shade trees, picnic and play areas.
           </h4>
 		  <br><br>
