add sep 3 council work session

--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                   see
                   <a
                     href="https://www.milwaukieoregon.gov/sites/default/files/2024-0618-ws_packetexhibits.pdf"
-                    >This document (search for “Parks Goal Update”)</a
+                    target="new">July 18, 2024 Council Work Session</a
                   >
-                  from the July 18, 2024 Milwaukie City Council meeting
+                  (search for “Parks Goal Update”) and <a href="https://www.milwaukieoregon.gov/sites/default/files/2024-0903-ws_packet.pdf" target="new">Sep 3, 2024 Council Work Session</a> (Search for "Milwaukie Bay Park").
                 </li>
               </ol>
             </article>
