--- a/index.html
+++ b/index.html
@@ -33,37 +33,37 @@
       <!-- Header -->
       <section id="header">
         <div class="container demo-wrap">
-<br><br>
+          <br /><br />
           <!-- Logo -->
-		   <div class="mbp demo-content">
-          <h1 id="logo" >
-            <span class="acronym">M</span>ilwaukie
-            <span class="acronym">B</span>ay <span class="acronym">P</span>ark
-          </h1>
-          <br />
-          <h4>
-            may soon lose over <b>$2 Million</b> of grant money set
-            aside for bathrooms, shade trees, picnic and play areas.
-          </h4>
-		  <br><br>
-          <h2>It's time to ask the Clackamas County Commissioners:</h2>
-          <p>...</p>
-          <h1 id="logo" class="wtf">
-            <a href="index.html"
-              ><span class="acronym">W</span>here's
-              <span class="acronym">T</span>he
-              <span class="acronym">F</span>unding?</a
-            >
-          </h1>
+          <div class="mbp demo-content">
+            <h1 id="logo">
+              <span class="acronym">M</span>ilwaukie
+              <span class="acronym">B</span>ay <span class="acronym">P</span>ark
+            </h1>
+            <br />
+            <h4>
+              may soon lose over <b>$2 Million</b> of grant money set aside for
+              bathrooms, shade trees, picnic and play areas.
+            </h4>
+            <br /><br />
+            <h2>It's time to ask the Clackamas County Commissioners:</h2>
+            <p>...</p>
+            <h1 id="logo" class="wtf">
+              <a href="index.html"
+                ><span class="acronym">W</span>here's
+                <span class="acronym">T</span>he
+                <span class="acronym">F</span>unding?</a
+              >
+            </h1>
 
-          <br />
-          <h3>
-            This is fiscal mismanagement plain and simple. It's time for your
-            elected officials to stop playing politics, and use the money we
-            already have to finish building the park.
-          </h3>
-		  <p>👇 Scroll Down to Learn More!</p>
-		</div>
+            <br />
+            <h3>
+              This is fiscal mismanagement plain and simple. It's time for your
+              elected officials to stop playing politics, and use the money we
+              already have to finish building the park.
+            </h3>
+            <p>👇 Scroll Down to Learn More!</p>
+          </div>
           <!-- Nav -->
           <nav id="nav">
             <ul>
@@ -73,9 +73,9 @@
                 >
               </li>
               <li>
-                <a class="icon solid fa-question" href="#who"
-                  ><span>Who We Are</span></a
-                >
+                <a class="icon solid fa-question" href="#faq"
+                  ><span>FAQ</span>
+                </a>
               </li>
               <li>
                 <a class="icon solid fa-comment" href="#what"
@@ -101,21 +101,24 @@
       <section id="main">
         <div class="container">
           <div id="content">
-            <!-- Post -->
-
-            <article id="gist" class="box post">
-				<header>
-				  <h2>Here's the gist</h2>
-				</header>
-				<p>
-				  Milwaukie Bay Park (MBP) is located near downtown Milwaukie, Oregon.  It boasts a beautiful view of the Willamette River, a multi use trail, and a boat launch.  It's a beautiful park, but it could be so much more.  Many improvements were planned, but are not getting built, due to the Clackamas County Commissioners playing politics instead of finishing the park.  If you'd like to help MBP be all it can be, read on!
-				</p>
-  
-			
+            <article id="disclaimer" class="box post">
+              <header>
+                <h2>Disclaimer</h2>
+              </header>
+              <p>
+                This website is not affiliated with the City of Milwaukie,
+                Milwaukie Parks Foundation, or North Clackamas Parks and
+                Recreation (NCPRD). This website is run by a group of concerned
+                citizens who wanted to make it easier for others to understand
+                what is going on with the park.
+              </p>
+            </article>
             <article id="facts" class="box post">
               <header>
                 <h2>Here are the facts</h2>
               </header>
+
+              <!-- Oasis -->
               <h3>
                 Milwaukie Bay Park is a riverside oasis open to everyone. But
                 it's unfinished.
@@ -126,19 +129,22 @@
                   improvements that would make the park more accessible to
                   everyone. This money was intended to build bathrooms, plant
                   shade trees, construct a picnic area, playground, and a splash
-                  pad at Milwaukie Bay Park. [<a
+                  pad at Milwaukie Bay Park.
+                  <a
                     href="https://sites.jla.us.com/files/milwaukiebaypark/about/2019-0424-mbp-aerialrendering.pdf?42bd0534e1"
                     target="new"
                     >See the final park design here</a
-                  >]
+                  >
                 </li>
                 <li>
                   These grants include $370,000 in state grants, $1.5 million in
                   Metro grants, and $520,000 from the Land and Water
-                  Conservation Fund [<a
+                  Conservation Fund
+                  <a
                     href="https://www.milwaukieoregon.gov/sites/default/files/2024-0618-ws_packetexhibits.pdf"
-                    >Source</a
-                  >].
+                  >
+                    Source</a
+                  >.
                 </li>
                 <li>
                   The Clackamas County Commissioners directed NCPRD to put the
@@ -154,16 +160,17 @@
                 </li>
               </ol>
 
+              <!-- Transparency -->
               <h3>Public transparency and accountability is lacking.</h3>
               <ol>
                 <li>
                   In 2021, the County Board of Commissioners directed NCPRD put
                   a “90-day hold on the project” as Commissioner Paul Savas was
                   concerned that Milwaukie could one day leave the North
-                  Clackamas Parks and Recreation District. Tying this issue to park construction is 
-                  political theater. Regardless of whether Milwaukie leaves the
-                  district, the park would remain equally accessible to
-                  everyone.
+                  Clackamas Parks and Recreation District. Tying this issue to
+                  park construction is political theater. Regardless of whether
+                  Milwaukie leaves the district, the park would remain equally
+                  accessible to everyone.
                 </li>
                 <li>
                   For over two years now that “90-day hold” has been in place
@@ -174,14 +181,18 @@
                 </li>
                 <li>
                   For proof of this lack of transparency, see past web snapshots
-                  of the park page from [<a
+                  of the park page from
+                  <a
                     href="https://web.archive.org/web/20230601191037/https://ncprd.com/milwaukie-bay-park-project"
                     >June 01 2023</a
-                  >] and [<a
+                  >
+                  and
+                  <a
                     href="https://web.archive.org/web/20240706071115/https://ncprd.com/milwaukie-bay-park-project"
                     target="new"
                     >July 06 2024</a
-                  >] which mention this "90 day hold".
+                  >
+                  which mention this "90 day hold".
                 </li>
                 <li>
                   Friends of Milwaukie Bay Park emailed NCPRD in August asking
@@ -199,6 +210,8 @@
                   lapsing grant money.
                 </li>
               </ol>
+
+              <!-- Mismanagement -->
 
               <h3>We may lose this grant money due to fiscal mismanagement</h3>
               <ol>
@@ -221,12 +234,17 @@
               </h3>
               <ol>
                 <li>
-                  There is an open legal question about whether or not Milwaukie
-                  can leave the North Clackamas Parks and Recreation District.
+                  You may hear a talking point from the County Commissioners
+                  that construction is delayed because Milwaukie is pursuing
+                  legal action against the county. Don't buy it. This is
+                  misdirection.
                 </li>
                 <li>
-                  This is a complex matter that's not likely to be resolved
-                  soon.
+                  The City is seeking clarification from the courts on whether
+                  Milwaukie could hypothetically leave the district, but no
+                  decision has been made on what the City may do in the future.
+                  Since the park is a regional benefit to everyone, this open
+                  question should not be an excuse to hold up construction.
                 </li>
                 <li>
                   It's time to separate these two issues, so that we can improve
@@ -234,32 +252,23 @@
                   County and beyond.
                 </li>
                 <li>
-                  If you hear the excuse that the park is on hold because of
-                  this legal question: don't buy it. This is political
-                  misdirection.
-                </li>
-                <li>
                   For a thorough background and timeline on the conflict between
                   the City of Milwaukie and the Clackamas County Commissioners,
                   see
                   <a
                     href="https://www.milwaukieoregon.gov/sites/default/files/2024-0618-ws_packetexhibits.pdf"
-                    target="new">July 18, 2024 Council Work Session</a
+                    target="new"
+                    >July 18, 2024 Council Work Session
+                  </a>
+                  (search for “Parks Goal Update”) and
+                  <a
+                    href="https://www.milwaukieoregon.gov/sites/default/files/2024-0903-ws_packet.pdf"
+                    target="new"
+                    >Sep 3, 2024 Council Work Session</a
                   >
-                  (search for “Parks Goal Update”) and <a href="https://www.milwaukieoregon.gov/sites/default/files/2024-0903-ws_packet.pdf" target="new">Sep 3, 2024 Council Work Session</a> (Search for "Milwaukie Bay Park").
+                  (Search for "Milwaukie Bay Park").
                 </li>
               </ol>
-            </article>
-
-            <article id="who" class="box post">
-              <header>
-                <h2>Who We Are</h2>
-              </header>
-              <p>
-                We are Friends of Milwaukie Bay Park, a group of citizens who
-                want our leaders to put politics aside, and finish building what
-                we started.
-              </p>
             </article>
 
             <article id="what" class="box post">
@@ -390,7 +399,8 @@
                 suggested talking points when writing letters of support: (<a
                   href="https://docs.google.com/document/d/1wk-zNKLQARGiqhW-wPW-guhNPHAshC-J/pub"
                   target="new"
-                  >Link to document</a
+                >
+                  Link to document</a
                 >)
               </p>
             </article>
@@ -398,26 +408,30 @@
         </div>
       </section>
 
+      <!-- Footer -->
+      <section id="footer">
+        <div class="container">
+          <header>
+            <p>
+              We are Friends of Milwaukie Bay Park, a group of citizens who want
+              our leaders to put politics aside, and finish building what we
+              started.
+            </p>
 
-			<!-- Footer -->
-			<section id="footer">
-				<div class="container">
-					<header>
-						<h3>Questions or comments? <strong>Get in touch: mbp (dot) wtf (at) gmail (dot) com</strong></h3>
-					</header>
-				</div>
-				<div id="copyright" class="container">
-					<ul class="links">
-						<li>&copy; MBP.WTF. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</section>
-
-
-
+            <h3>
+              Questions or comments?
+              <strong>Get in touch: mbp (dot) wtf (at) gmail (dot) com</strong>
+            </h3>
+          </header>
+        </div>
+        <div id="copyright" class="container">
+          <ul class="links">
+            <li>&copy; MBP.WTF. All rights reserved.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </section>
     </div>
-
-
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
