--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 >
               </li>
               <li>
-                <a class="icon solid fa-question" href="#faq"
-                  ><span>FAQ</span>
+                <a class="icon solid fa-question" href="#who"
+                  ><span>Who We Are</span>
                 </a>
               </li>
               <li>
@@ -270,6 +270,17 @@
                 </li>
               </ol>
             </article>
+
+            <article id="who" class="box post">
+				<header>
+				  <h2>Who We Are</h2>
+				</header>
+				<p>
+				  We are Friends of Milwaukie Bay Park, a group of citizens who
+				  want our leaders to put politics aside, and finish building what
+				  we started.
+				</p>
+			  </article>			
 
             <article id="what" class="box post">
               <header>
