--- a/index.html
+++ b/index.html
@@ -36,46 +36,43 @@
           <br /><br />
           <!-- Logo -->
           <div class="mbp demo-content">
-            <h1 id="logo">
+            <h1 id="logo" class="mbp">
               <span class="acronym">M</span>ilwaukie
               <span class="acronym">B</span>ay <span class="acronym">P</span>ark
             </h1>
             <br />
             <h4>
-              may soon lose over <b>$2 Million</b> of grant money set aside for
-              bathrooms, shade trees, picnic and play areas.
+              has over <b>$2 Million</b> of grant money set aside for
+              bathrooms, shade trees, picnic and play areas. <br>But construction has been "on hold" for 3 years!  As delays continue, costs continue to rise, and fewer park improvements will be possible with existing funding. 
             </h4>
-            <br /><br />
-            <h2>It's time to ask the Clackamas County Commissioners:</h2>
-            <p>...</p>
+			<br>
+            <h2>Enough is enough! It's time to put politics aside and</h2>
             <h1 id="logo" class="wtf">
               <a href="index.html"
-                ><span class="acronym">W</span>here's
-                <span class="acronym">T</span>he
-                <span class="acronym">F</span>unding?</a
+                ><span class="acronym">W</span>ork
+                <span class="acronym">T</span>ogether <br><span class="subtext">for the</span> 
+                <span class="acronym">F</span>uture!</a
               >
             </h1>
 
             <br />
             <h3>
-              This is fiscal mismanagement plain and simple. It's time for your
-              elected officials to stop playing politics, and use the money we
-              already have to finish building the park.
+              Your voice matters!  Read on to learn how you can help get the park back on track!
             </h3>
             <p>👇 Scroll Down to Learn More!</p>
           </div>
           <!-- Nav -->
           <nav id="nav">
             <ul>
+			<li>
+				<a class="icon solid fa-question" href="#news"
+					><span>Latest News</span>
+				</a>
+			</li>	
               <li>
                 <a class="icon solid fa-check" href="#facts"
                   ><span>Get the Facts</span></a
                 >
-              </li>
-              <li>
-                <a class="icon solid fa-question" href="#who"
-                  ><span>Who We Are</span>
-                </a>
               </li>
               <li>
                 <a class="icon solid fa-comment" href="#what"
@@ -101,18 +98,6 @@
       <section id="main">
         <div class="container">
           <div id="content">
-            <article id="disclaimer" class="box post">
-              <header>
-                <h2>Disclaimer</h2>
-              </header>
-              <p>
-                This website is not affiliated with the City of Milwaukie,
-                Milwaukie Parks Foundation, or North Clackamas Parks and
-                Recreation (NCPRD). This website is run by a group of concerned
-                citizens who wanted to make it easier for others to understand
-                what is going on with the park.
-              </p>
-            </article>
             <article id="facts" class="box post">
               <header>
                 <h2>Here are the facts</h2>
@@ -424,6 +409,11 @@
         <div class="container">
           <header>
             <p>
+                This website is not affiliated with the City of Milwaukie,
+                Milwaukie Parks Foundation, or North Clackamas Parks and
+                Recreation (NCPRD).
+			</p><p>
+
               We are Friends of Milwaukie Bay Park, a group of citizens who want
               our leaders to put politics aside, and finish building what we
               started.
