latest news about funding

--- a/index.html
+++ b/index.html
@@ -98,6 +98,59 @@
       <section id="main">
         <div class="container">
           <div id="content">
+
+            <article id="news" class="box post">
+				<header>
+				  <h2>Latest News</h2>
+				</header>
+              <!-- Voices -->
+              <h3>
+                9/11/24: Your voices are making a difference!
+              </h3>
+
+				<p>
+					In the agenda for tonight's District Advisory Committee there is a promising update about grant funding:
+
+					<blockquote>NCPRD staff has recently met with federal, state, and local grant partners to maintain the current grant funding. NCPRD is seeking a formal extension for our federal grant until fall 2026. This is the only grant with a firm deadline. The other grant partners have said they will follow. NCPRD budget resources for phase three improvements are still secure and still in the budget.</blockquote>
+					
+					The report also states:<br><br>
+
+				<blockquote>
+					The Board of Directors have received several emails in support of completing phase three improvement at the park. These go into the Director log for community input.</blockquote>
+
+					But just because the funding is secure until 2026 does not mean our work is done. The park is still "on hold" while the Clackamas County Commissioners refuse to negotiate in good faith with the City of Milwaukie. Meanwhile construction costs continue to skyrocket due to inflation.<p><br>
+
+					Here is the standard response email from the County Commissioners:
+
+					<blockquote>
+						Phase three of Milwaukie Bay Park is on
+						pause because there’s been no progress on updating the intergovernmental
+						agreement between NCPRD and the City of Milwaukie. It is our understanding
+						the City is seeking to clarify an appropriate legal route for their potential future
+						withdrawal from the District. Before continuing construction, the district needs
+						assurance that should Milwaukie choose to depart, District investments are not
+						removed from district ownership at the expense of the rest of the District’s
+						taxpayers.
+					</blockquote>
+
+					This doesn't make sense.  If Milwaukie did leave the district, many things could indeed change.  But ownership and accessibility of the park would not.  The park is owned by the City, and would remain owned by the City whether or not the City leaves the district.  The park is open to the public, and would remain open to the public regardless of whether or not the City leaves the district. 
+<p><br>
+					<b>The City of Milwaukie is trying to negotiate in good faith with the County Commissioners, but they are refusing to come to the table.</b>
+					<p>
+					From the <a href="https://www.milwaukieoregon.gov/sites/default/files/2024-0903-ws_packet.pdf">Sep 3, 2024 City Council meeting</a>:
+
+					<blockquote>Mayor Batey asked if the District Board would be open to
+						conversations with two Commissioners and two City Councilors to try to make progress on
+						Milwaukie Bay Park, but Director Savas clarified that they would not resume negotiations until
+						the appeal on the validation action is resolved or dropped.</blockquote>
+
+					Keep those emails to the County Commissioners coming! Tell them it's time to sit down with the City and work out a plan!
+					bcc@clackamas.us
+				</p>
+			  </article>	
+
+
+
             <article id="facts" class="box post">
               <header>
                 <h2>Here are the facts</h2>
