remove accountability section, after website updates

--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@
               <p>Yes, they can, and this is the most important point. The BCC has unnecessarily tied two unrelated issues together, using this as justification to halt progress on the park indefinitely. The legal matter is about clarifying the process for potential withdrawal from NCPRD. It does not prevent the City and NCPRD from collaborating on the park's development. By proceeding with the park, both parties can continue to serve the community while the legal issue is resolved.</p>
               
               <h3 id="should-ncprd-invest-if-city-might-leave"><a href="#should-ncprd-invest-if-city-might-leave">If the City might leave NCPRD, why should the district invest in the park?</a></h3>
-              <p>Because no decision to leave has been made, and investing in the park benefits all district residents. Additionally, moving forward with the project could strengthen the partnership between the City and NCPRD, potentially influencing the City to remain in the district. Even if the City did someday leave NCPRD, the park would remain open to everyone, continuing to be a regional asset to residents of Clackamas County and beyond.</p>
+              There are many reasons!
+              <ol>
+                <li>Because no decision to leave has been made</li>
+                <li>Investing in the park benefits all district residents</li>
+                <li>$2.4 million in grant money is set aside specifically for these improvements and is at risk of being lost</li>
+              </ol>
+              <p>Additionally, moving forward with the project could strengthen the partnership between the City and NCPRD, potentially influencing the City to remain in the district. Even if the City did someday leave NCPRD, the park would remain open to everyone, continuing to be a regional asset to residents of Clackamas County and beyond.</p>
               
               <h3 id="how-park-benefits-unincorporated-residents"><a href="#how-park-benefits-unincorporated-residents">How does Milwaukie Bay Park benefit unincorporated Clackamas County residents?</a></h3>
               <p>Milwaukie Bay Park is designed to be a regional destination. Residents from unincorporated areas frequently visit Milwaukie for work, shopping, and recreation. The park will offer amenities and events that all community members can enjoy, enhancing quality of life throughout the district.</p>
@@ -246,57 +252,6 @@
                     target="new"
                     >project schedule</a
                   >, construction should have been completed by now.
-                </li>
-              </ol>
-
-              <!-- Transparency -->
-              <h3>Public transparency and accountability is lacking.</h3>
-              <ol>
-                <li>
-                  In 2021, the County Board of Commissioners directed NCPRD put
-                  a “90-day hold on the project” as Commissioner Paul Savas was
-                  concerned that Milwaukie could one day leave the North
-                  Clackamas Parks and Recreation District. Tying this issue to
-                  park construction is political theater. Regardless of whether
-                  Milwaukie leaves the district, the park would remain equally
-                  accessible to everyone.
-                </li>
-                <li>
-                  For over two years now that “90-day hold” has been in place
-                  and no planning or development has occurred. Meanwhile,
-                  construction costs have skyrocketed with inflation and NCPRD
-                  has focused parks development efforts on other projects, as
-                  well as new master planning for the entire district.
-                </li>
-                <li>
-                  For proof of this lack of transparency, see past web snapshots
-                  of the park page from
-                  <a
-                    href="https://web.archive.org/web/20230601191037/https://ncprd.com/milwaukie-bay-park-project"
-                    >June 01 2023</a
-                  >
-                  and
-                  <a
-                    href="https://web.archive.org/web/20240706071115/https://ncprd.com/milwaukie-bay-park-project"
-                    target="new"
-                    >July 06 2024</a
-                  >
-                  which mention this "90 day hold".
-                </li>
-                <li>
-                  Friends of Milwaukie Bay Park emailed NCPRD in August asking
-                  about this 90 day hold, and for the website to be updated with
-                  information about the status of the grant money. The email was
-                  never answered.
-                </li>
-                <li>
-                  Someone updated the
-                  <a href="https://ncprd.com/milwaukie-bay-park-project"
-                    >park page</a
-                  >
-                  in the past few weeks to remove the "90 days" wording, without
-                  adding any details about project timing or acknowledging the
-                  lapsing grant money.
                 </li>
               </ol>
 
